logs/error.log
  File "<string>", line 1
    gpioset gpiochip0 68=1
            ^^^^^^^^^
SyntaxError: invalid syntax
  File "<string>", line 1
    gpioset gpiochip0 68=1
            ^^^^^^^^^
SyntaxError: invalid syntax
  File "<string>", line 1
    gpioset gpiochip0 68=1
            ^^^^^^^^^
SyntaxError: invalid syntax
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: gpioset: error setting the GPIO line valueserror setting the GPIO line values: Permission denied
: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
gpioset: error setting the GPIO line values: Permission denied
